DS-336 ensure components fit the 8px grid and that borders are not distorting their sizes - components affected: textarea/text input, tabs, table
add an underscore to the break-word.scss filename
notification banner had its ds_last-child-no-margin helper in the wrong location

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -46,7 +46,8 @@ $table-row-hover-colour: $ds_colour__grey--lighter !default;
     }
 
     tr > * {
-        padding: 8px 16px 8px 8px;
+        /// [1] componsate for table row 1px border
+        padding: 8px 16px 7px 8px; /// [1]
     }
 
 
